--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="topDiv">
       <img class="firstCloud" src="cloud.png" alt="">
-      <h1 class="Head">I'm Mazhar </h1>
+      <h1 class="Head">I'm Mazhar Rajput</h1>
       <h2>I'm Developer</h2>
       <img class="secondcloud" src="cloud.png" alt="">
       <img class="mountainPic" src="mountain.png" alt="">
