--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -173,6 +173,9 @@
         </div>
       </div>
       <hr>
+      <div>
+        Wanna Play Dices?
+      </div>
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>What to write me?</h3>
